--- a/src/Pages/Home/now/now.scss
+++ b/src/Pages/Home/now/now.scss
@@ -68,3 +68,11 @@ h2{
   right: 0;
   border-radius: 5px;
 }
+.totop{
+  position: fixed;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+}
