--- a/src/Layout/footer.scss
+++ b/src/Layout/footer.scss
@@ -13,8 +13,7 @@
         border-radius:10px ;
     }
     &__box{
-        width: 1200px;
-        height: 548px;
+
         border-radius:10px ;
         background: rgba(29, 58, 160, 0.90);
         display: flex;
@@ -22,6 +21,9 @@
         justify-content: center;
         flex-direction: column;
         position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
         
     }
     &__icon{
@@ -99,5 +101,8 @@
     .span{
         background: none;
         color: #F2F60F;
+    }
+    &__relative{
+        position: relative;
     }
 }
