--- a/src/Layout/header.scss
+++ b/src/Layout/header.scss
@@ -30,3 +30,10 @@
     }
   }
 }
+.header__search{
+  font-size: 20px;
+  border-radius:8px;
+  padding: 10px 20px;
+  background: white;
+  outline: none;
+}
