--- a/src/Pages/login/login.scss
+++ b/src/Pages/login/login.scss
@@ -23,6 +23,7 @@
         padding-left: 20px;
         font-size: 17px;
         margin-bottom: 14px;
+        color: #fff;
     }
     &__input__one::placeholder{
         padding-left: 20px;
@@ -42,6 +43,7 @@
         background: #1E2538;
         color: #fff;
         margin-top: 14px;
+        border: 1px solid #fff;
     }
     &__a{
         color: #3657CB;
@@ -64,6 +66,7 @@
         justify-content: center;
         border: 1px solid #1E2538;
         background: #3657CB;
+        cursor: pointer;
     }
     .icon img{
         background: #3657CB;
@@ -77,7 +80,10 @@
         cursor: pointer;
     }
     .eye{
-        width: 50px;
-        height: 50px;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 42%;
+        right:34% ;
     }
 }
